[package]
name = "bnetchat"
version = "0.1.0"
edition = "2021"
publish = false
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
time = "0.3.17"
dotenv = "0.15.0"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
eframe = "0.20.0"
