[package]
name = "bnetchat"
version = "0.1.0"
edition = "2021"
publish = false
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
eframe = "0.31.1"
serde_json = "1.0.92"
